...
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="10dp"
        android:id="@+id/bottomNavBar"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:foregroundGravity="bottom"
...
        >

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/radioGraup1"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Home"
                android:layout_weight="1"
                android:button="@null"
                android:padding="2dp"
                android:checked="false"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/bottomHome"
                android:drawableTop="@drawable/menu_icon_home"
                >
            </RadioButton>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Add Product"
                android:layout_weight="1"
                android:button="@null"
                android:padding="2dp"
                android:checked="false"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/bottomAddproduct"
                android:drawableTop="@drawable/menu_icon_addprod"
                >
            </RadioButton>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Search"
                android:layout_weight="1"
                android:button="@null"
                android:padding="2dp"
                android:checked="false"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/bottomsearch"
                android:drawableTop="@drawable/menu_icon_search"
                >
            </RadioButton>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="My Cart"
                android:layout_weight="1"
                android:button="@null"
                android:padding="2dp"
                android:checked="false"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/bottomMycart"
                android:drawableTop="@drawable/menu_icon_mycart"
                >
            </RadioButton>

            <RadioButton
                android:layout_width="match_parent"
...
