...
                android:textColor="@color/black"
                android:textSize="15dp">

            </TextView>

            <EditText
                android:id="@+id/addProductName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittextshape"
                android:padding="10dp"
                tools:ignore="SpeakableTextPresentCheck">
...
                android:textColor="@color/black"
                android:textSize="15dp">

            </TextView>

            <EditText
                android:id="@+id/addProductPrice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittextshape"
                android:padding="10dp"
                tools:ignore="SpeakableTextPresentCheck">
...
                android:textColor="@color/black"
                android:textSize="15dp">

            </TextView>

            <EditText
                android:id="@+id/addProductDesc"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittextshape"
                android:padding="10dp"
                tools:ignore="SpeakableTextPresentCheck">
...
                android:textColor="@color/black"
                android:textSize="15dp">

            </TextView>

            <EditText
                android:id="@+id/addProductCategory"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittextshape"
                android:padding="10dp"
                tools:ignore="SpeakableTextPresentCheck">
...
            </EditText>

            <TextView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:id="@+id/confirmAddProd"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="Confirm"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:fontFamily="sans-serif"
                android:background="@drawable/button_logout_shape">

            </TextView>
...
