...
            >

        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linealLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">
...
            android:textColor="@color/black"
            android:textSize="18dp">

        </TextView>

        <EditText
            android:id="@+id/shipname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextshape"
            android:hint="Name"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#AE636363">

        </EditText>

        <EditText
            android:id="@+id/shipphone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextshape"
            android:hint="Phone no."
            android:padding="10dp"
...
