...

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/home_layout"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
...

            <ListView
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/productslist"
                android:nestedScrollingEnabled="true"
                >


            </ListView>

...
